# DevOps-with-AI-Agents

./: .gitignore  01 - How the Project Works.md  02 - OpenAI Agents SDK.md  03 - Building the Components.md  04 - FastAPI + Next.js Architecture.md  AI Agent vs Traditional Tools.md  Core Components of an AI Agent.md  Cost break down.md  Data Retrieval Flow.canvas  Multiple agents working together.md  README.md  _navbar.md  _sidebar.md  ai_logging_levels.canvas  index.html
05-Projects/04-Complex-Agent-with-Actions-Memory-and-Durable-Execution/: .gitignore  README.md  app.py  constitution.txt  main.py  pyproject.toml  system_prompt.txt  worker.py
05-Projects/04-Complex-Agent-with-Actions-Memory-and-Durable-Execution/.gemini/commands/: sp.constitution.toml
05-Projects/04-Complex-Agent-with-Actions-Memory-and-Durable-Execution/.specify/memory/: constitution.md
05-Projects/04-Complex-Agent-with-Actions-Memory-and-Durable-Execution/scripts/: test_gemini.py
05-Projects/04-Complex-Agent-with-Actions-Memory-and-Durable-Execution/specs/002-streamlit-temporal-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
05-Projects/04-Complex-Agent-with-Actions-Memory-and-Durable-Execution/src/: config.py
05-Projects/04-Complex-Agent-with-Actions-Memory-and-Durable-Execution/src/agents/: incident_agent.py  temporal_proxy.py
05-Projects/04-Complex-Agent-with-Actions-Memory-and-Durable-Execution/src/memory/: pattern_store.py
05-Projects/04-Complex-Agent-with-Actions-Memory-and-Durable-Execution/tests/: test_agent.py  test_temporal_proxy.py
(+229 files in other folders)
