[project]
name = "04-complex-agent-with-actions-memory-and-durable-execution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.82.6",
    "pydantic>=2.12.5",
    "streamlit>=1.55.0",
    "temporalio>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
